--- a/index.html
+++ b/index.html
@@ -4,231 +4,258 @@
   <meta charset="UTF-8">
   <title>Symbiotic Runner</title>
   <style>
-    body {
+    html, body {
       margin: 0;
+      padding: 0;
+      height: 100%;
+      width: 100%;
       overflow: hidden;
       font-family: Arial, sans-serif;
-      background: #adff2f; /* faded neon green */
+      color: white;
+      background: radial-gradient(circle at center, rgba(0, 255, 136, 0.25), rgba(0, 0, 0, 0.95));
     }
-
-    header {
-      background: rgba(0, 0, 0, 0.8);
-      color: #00ff00;
-      padding: 20px;
-      text-align: center;
-      font-size: 28px;
-      font-weight: bold;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      z-index: 10;
-    }
-
-    #gameCanvas {
+    canvas {
       display: block;
+      width: 100vw;
+      height: 100vh;
       background: transparent;
-      margin: 0;
+    }
+    #overlay {
       position: absolute;
-      top: 80px;
-      left: 0;
-    }
-
-    #ui {
-      position: fixed;
-      top: 80px;
-      right: 20px;
-      background: rgba(0,0,0,0.6);
-      padding: 10px;
-      border-radius: 10px;
-      color: #fff;
-      font-size: 16px;
-    }
-
-    #usernameInput {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: rgba(0,0,0,0.9);
-      padding: 20px;
-      border-radius: 10px;
+      top: 0; left: 0; right: 0; bottom: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: rgba(0,0,0,0.5);
+      color: white;
+      flex-direction: column;
+      z-index: 2;
       text-align: center;
-      color: #fff;
-      z-index: 20;
     }
-
+    #overlay h1 {
+      font-size: 60px;
+      margin-bottom: 20px;
+      color: #00ff88;
+      text-shadow: 0 0 10px #00ff88, 0 0 20px #00ff88;
+    }
+    #overlay p {
+      font-size: 22px;
+    }
     button {
-      margin-top: 10px;
-      padding: 10px 20px;
-      font-size: 16px;
-      border: none;
-      border-radius: 8px;
-      background: #00ff00;
+      margin-top: 20px;
+      padding: 12px 24px;
+      font-size: 20px;
       cursor: pointer;
+      border: none;
+      border-radius: 10px;
+      background: #00ff88;
+      color: black;
+      font-weight: bold;
+      box-shadow: 0 0 15px #00ff88;
     }
-
     button:hover {
-      background: #33ff33;
+      background: #00cc6f;
+    }
+    input {
+      padding: 10px;
+      font-size: 18px;
+      border-radius: 8px;
+      border: 1px solid #00ff88;
+      margin-top: 15px;
+      text-align: center;
     }
   </style>
 </head>
 <body>
-  <header>Symbiotic Runner</header>
-
-  <canvas id="gameCanvas"></canvas>
-
-  <div id="ui" style="display:none;">
-    <p>Score: <span id="score">0</span></p>
-    <p>High Score: <span id="highScore">0</span></p>
-    <button id="restartBtn">Restart</button>
+  <div id="overlay">
+    <h1>Symbiotic Runner</h1>
+    <p>Enter a username to start</p>
+    <input type="text" id="usernameInput" placeholder="Username" />
+    <button onclick="saveUsername()">Save & Play</button>
   </div>
 
-  <div id="usernameInput">
-    <h2>Enter Username</h2>
-    <input type="text" id="username" placeholder="Your name">
-    <br>
-    <button id="startBtn">Start Game</button>
-  </div>
+  <canvas id="gameCanvas" width="800" height="400"></canvas>
+  
+  <script type="module">
+    import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
 
-  <script>
+    const SUPABASE_URL = "https://jzofwfixzsotrcmrxlsx.supabase.co";
+    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imp6b2Z3Zml4enNvdHJjbXJ4bHN4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTgzMTczODcsImV4cCI6MjA3Mzg5MzM4N30.zgV7-3R0cuopTtw8caZaYnkM5Mxg1bphJzkuvZGuf-8";
+    const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+
     const canvas = document.getElementById("gameCanvas");
     const ctx = canvas.getContext("2d");
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight - 80; // below header
+    const overlay = document.getElementById("overlay");
+    const usernameInput = document.getElementById("usernameInput");
 
-    const ui = document.getElementById("ui");
-    const scoreEl = document.getElementById("score");
-    const highScoreEl = document.getElementById("highScore");
-    const restartBtn = document.getElementById("restartBtn");
-    const usernameInputDiv = document.getElementById("usernameInput");
-    const startBtn = document.getElementById("startBtn");
-    const usernameField = document.getElementById("username");
+    let username = localStorage.getItem("username") || null;
+    if (username) {
+      usernameInput.value = username;
+      overlay.innerHTML = `
+        <h1>Symbiotic Runner</h1>
+        <p>Press SPACE to Start</p>
+        <p>Welcome back, <b>${username}</b></p>
+      `;
+    }
 
-    let username = "";
-    let highScores = JSON.parse(localStorage.getItem("symbioticRunnerHighScores")) || {};
-
-    let player = { x: 50, y: 0, width: 20, height: 20, dy: 0, gravity: 0.6, jumpPower: -12, grounded: false };
+    let gameRunning = false;
+    let player = { x: 100, y: 300, width: 40, height: 40, dy: 0, jump: false };
+    let gravity = 0.6;
     let obstacles = [];
-    let frame = 0;
     let score = 0;
     let highScore = 0;
-    let gameRunning = false;
 
-    function drawPlayer() {
-      ctx.fillStyle = "#00FF00";
-      ctx.font = "bold 20px Arial";
-      ctx.textAlign = "center";
-      ctx.textBaseline = "middle";
-      ctx.fillText("S", player.x + player.width / 2, player.y + player.height / 2);
+    function resizeCanvas() {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
     }
+    window.addEventListener("resize", resizeCanvas);
+    resizeCanvas();
 
-    function drawObstacles() {
-      ctx.fillStyle = "black";
-      obstacles.forEach(o => ctx.fillRect(o.x, o.y, o.width, o.height));
-    }
-
-    function updatePlayer() {
-      player.dy += player.gravity;
-      player.y += player.dy;
-
-      if (player.y + player.height >= canvas.height) {
-        player.y = canvas.height - player.height;
-        player.dy = 0;
-        player.grounded = true;
+    document.addEventListener("keydown", (e) => {
+      if (!gameRunning && e.code === "Space" && username) {
+        startGame();
       }
-    }
-
-    function updateObstacles() {
-      obstacles.forEach(o => o.x -= 5);
-      obstacles = obstacles.filter(o => o.x + o.width > 0);
-
-      // Obstacle spawn logic
-      if (frame % (score < 20 ? 120 : 60) === 0) {
-        let height = 40;
-        obstacles.push({ x: canvas.width, y: canvas.height - height, width: 20, height });
+      if (gameRunning && (e.code === "ArrowUp" || e.code === "Space")) {
+        if (!player.jump) {
+          player.dy = -12;
+          player.jump = true;
+        }
       }
+    });
+
+    function saveUsername() {
+      username = usernameInput.value.trim();
+      if (!username) {
+        alert("Enter a username!");
+        return;
+      }
+      localStorage.setItem("username", username);
+      overlay.innerHTML = `
+        <h1>Symbiotic Runner</h1>
+        <p>Press SPACE to Start</p>
+        <p>Welcome, <b>${username}</b></p>
+      `;
+      loadHighScore();
     }
 
-    function detectCollision() {
-      return obstacles.some(o =>
-        player.x < o.x + o.width &&
-        player.x + player.width > o.x &&
-        player.y < o.y + o.height &&
-        player.y + player.height > o.y
-      );
+    async function loadHighScore() {
+      let { data } = await supabase.from("wall").select("highscore").eq("user", username).single();
+      highScore = data ? data.highscore : 0;
     }
 
-    function updateScore() {
-      score++;
-      scoreEl.textContent = score;
-
+    async function saveHighScore() {
       if (score > highScore) {
         highScore = score;
-        highScoreEl.textContent = highScore;
-        highScores[username] = highScore;
-        localStorage.setItem("symbioticRunnerHighScores", JSON.stringify(highScores));
-      }
-    }
-
-    function gameLoop() {
-      if (!gameRunning) return;
-
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-      updatePlayer();
-      updateObstacles();
-      drawPlayer();
-      drawObstacles();
-      updateScore();
-
-      if (detectCollision()) {
-        gameRunning = false;
-        restartBtn.style.display = "block";
-      } else {
-        frame++;
-        requestAnimationFrame(gameLoop);
+        await supabase.from("wall").upsert({ user: username, highscore: highScore });
       }
     }
 
     function startGame() {
-      username = usernameField.value.trim() || "Player";
-      usernameInputDiv.style.display = "none";
-      ui.style.display = "block";
-
-      highScore = highScores[username] || 0;
-      highScoreEl.textContent = highScore;
-
-      resetGame();
-    }
-
-    function resetGame() {
-      player.y = canvas.height - player.height;
+      overlay.style.display = "none";
+      gameRunning = true;
+      player.y = canvas.height - 90;
       player.dy = 0;
+      player.jump = false;
       obstacles = [];
       score = 0;
-      frame = 0;
-      scoreEl.textContent = score;
-      restartBtn.style.display = "none";
-      gameRunning = true;
-      gameLoop();
+      requestAnimationFrame(update);
     }
 
-    // Controls
-    document.addEventListener("keydown", (e) => {
-      if ((e.code === "Space" || e.code === "ArrowUp") && player.grounded) {
-        player.dy = player.jumpPower;
-        player.grounded = false;
+    function drawPlayer() {
+      ctx.beginPath();
+      let wave = Math.sin(Date.now() / 200) * 10;
+      ctx.moveTo(player.x, player.y + 10 + wave);
+      ctx.bezierCurveTo(player.x, player.y + wave, player.x + player.width, player.y + wave, player.x + player.width, player.y + 20 + wave);
+      ctx.bezierCurveTo(player.x + player.width, player.y + player.height / 2 + wave, player.x, player.y + player.height / 2 + wave, player.x, player.y + player.height - 20 + wave);
+      ctx.bezierCurveTo(player.x, player.y + player.height + wave, player.x + player.width, player.y + player.height + wave, player.x + player.width, player.y + player.height - 10 + wave);
+
+      ctx.strokeStyle = "#00ff88";
+      ctx.lineWidth = 6;
+      ctx.shadowBlur = 20;
+      ctx.shadowColor = "#00ff88";
+      ctx.stroke();
+      ctx.shadowBlur = 0;
+    }
+
+    function update() {
+      if (!gameRunning) return;
+
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+      // Player
+      drawPlayer();
+
+      // Gravity
+      player.y += player.dy;
+      player.dy += gravity;
+
+      let groundY = canvas.height - 50;
+      if (player.y + player.height >= groundY) {
+        player.y = groundY - player.height;
+        player.dy = 0;
+        player.jump = false;
       }
-    });
 
-    restartBtn.addEventListener("click", resetGame);
-    startBtn.addEventListener("click", startGame);
+      // Ground
+      ctx.fillStyle = "#222";
+      ctx.fillRect(0, groundY, canvas.width, 50);
 
-    window.addEventListener("resize", () => {
-      canvas.width = window.innerWidth;
-      canvas.height = window.innerHeight - 80;
-    });
+      // Obstacles (easier early, harder later)
+      let spawnChance = 0.02;
+      if (Math.random() < spawnChance) {
+        if (score < 1000) {
+          if (obstacles.length === 0) {
+            obstacles.push({ x: canvas.width, y: groundY - 40, width: 30, height: 40 });
+          }
+        } else {
+          obstacles.push({ x: canvas.width, y: groundY - 40, width: 30, height: 40 });
+        }
+      }
+
+      ctx.fillStyle = "#ff4444";
+      obstacles.forEach((obs, i) => {
+        obs.x -= 6;
+        ctx.fillRect(obs.x, obs.y, obs.width, obs.height);
+        if (obs.x + obs.width < 0) obstacles.splice(i, 1);
+
+        // Collision (uses bounding box for fairness)
+        if (
+          player.x < obs.x + obs.width &&
+          player.x + player.width > obs.x &&
+          player.y < obs.y + obs.height &&
+          player.y + player.height > obs.y
+        ) {
+          gameOver();
+        }
+      });
+
+      // Score
+      score++;
+      ctx.fillStyle = "white";
+      ctx.font = "20px Arial";
+      ctx.fillText("Score: " + score, 20, 30);
+      ctx.fillText("High Score: " + highScore, 20, 60);
+
+      requestAnimationFrame(update);
+    }
+
+    async function gameOver() {
+      gameRunning = false;
+      await saveHighScore();
+      overlay.style.display = "flex";
+      overlay.innerHTML = `
+        <h1>Game Over</h1>
+        <p>Your score: ${score}</p>
+        <p>High score: ${highScore}</p>
+        <button onclick="startGame()">Restart</button>
+      `;
+    }
+
+    if (username) loadHighScore();
+
+    window.startGame = startGame;
+    window.saveUsername = saveUsername;
   </script>
 </body>
 </html>
